--- a/presentation/src/index.css
+++ b/presentation/src/index.css
@@ -1,9 +1,96 @@
-body {
+* {
   margin: 0;
-  font-family: "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  border: 0;
+  outline: 0;
+}
+:root {
+  --color-bg: #1f1f38;
+  --color-bg-variant: #2c2c6c;
+  --color-primary: #4db5ff;
+  --color-primary-variant: rgba(77, 151, 255, 0.5);
+  --color-white: #fff;
+  --color-light: rgba(255, 255, 255, 0.6);
+  --transition: all 0.5 ease;
+  --container-width-lg: 80%;
+  --container-width-md: 90%;
+  --container-width-sm: 95%;
+}
+html {
+  scroll-behavior: smooth;
+}
+body {
+  background: var(--color-bg);
+  color: var(--color-white);
+  line-height: 1.8;
+  background-image: url("../src/assets/bg-texture.png");
+}
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 600;
+}
+h1 {
+  font-size: 2.5rem;
+}
+section {
+  margin-top: 8rem;
+}
+section > h2,
+section > h5 {
+  text-align: center;
+  color: var(--color-light);
+}
+section > h2 {
+  color: var(--color-primary);
+  margin-bottom: 3rem;
+}
+.text-light {
+  color: var(--color-light);
+}
+a {
+  color: var(--color-primary);
+  transition: var(--transition);
+}
+a:hover {
+  color: var(--color-white);
+}
+.btn {
+  width: max-content;
+  color: var(--color-primary);
+  display: inline-block;
+  padding: 0.8rem 1.3rem;
+  border: 0.5rem;
+  cursor: pointer;
+  border: 1px solid var(--color-primary);
+  transition: var(--transition);
+}
+.btn:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+  border-color: transparent;
+}
+img {
+  width: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+/*///////////////////  MEDIA QUERIES  TABLETS ///////////////////*/
+@media (max-width: 998px) {
+  .container {
+    width: var(--container-width-md);
+  }
 }
